--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ invoke = "^2.0.0"
 pylint = "^2.15.10"
 pytest = "^7.2.1"
 coverage = "^7.1.0"
+sympy = "^1.11.1"
 
 [build-system]
 requires = ["poetry-core"]
