--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.8"
 invoke = "^2.0.0"
+inquirer = "^3.1.2"
 
 
 [tool.poetry.group.dev.dependencies]
